--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,7 +1,7 @@
 <section id="posts" class="posts-collapse" hidden>
   <div class="collection-title">
     <{% if site.seo %}h2{% else %}h1{% endif %}>
-    {{ page.title page.tagline }}
+    {{ page.title }}
     <small>{{  __.title.category  }}</small>
     </{% if site.seo %}h2{% else %}h1{% endif %}>
   </div>
