--- a/_includes/_helper/tagcloud.html
+++ b/_includes/_helper/tagcloud.html
@@ -1,58 +1,40 @@
-{% comment %} tagcloud(min_font, max_font, amount, color, start_color, end_color) {% endcomment %}
-{% capture tagcloud %}
-  {% assign tags = site.tags %}
-  {% assign max = max_font %}
-  {% assign min = min_font %}
-  {% assign sizes = '' | split: '' %}
-  {% assign unit = 'px' %}
-  {% assign start_color = start_color | split: ',' %}
-  {% assign end_color = end_color | split: ',' %}
-
-  {% for tag in tags %}
-    {% if forloop.index > amount %}
-      {% break %}
-    {% endif %}
-    {% assign sizes = sizes | push: tag[1].size %}
-  {% endfor %}
-
-  {% assign sizes = sizes | uniq | sort %}
-  {% assign length = sizes.size | minus: 1 %}
-
-  {% for tag in tags %}
-    {% if forloop.index > amount %}
-      {% break %}
-    {% endif %}
-
-    {% assign ratio = 0 %}
-
-    {% if length > 0 %}
-      {% for size in sizes %}
-        {% if size == tag[1].size %}
-          {% assign ratio = forloop.index0 | times: 1.0 | divided_by: length %}
-          {% break %}
-        {% endif %}
-      {% endfor %}
-    {% endif %}
-
-    {% assign tmp = max | minus: min | times: ratio %}
-    {% assign size = tmp | plus: min %}
-    {% assign tmp = size | round: 2 %}
-
-    {% assign style = 'font-size: ' | append: tmp | append: unit | append: ';' %}
-
-    {% if color %}
-      {% assign mid_color = '' | split: '' %}
-      {% for i in (0..2) %}
-        {% assign tmp = end_color[i] | minus: start_color[i] | times: ratio %}
-        {% assign tmp = start_color[i] | plus: tmp | round %}
-        {% assign mid_color = mid_color | push: tmp %}
-      {% endfor %}
-      {% assign mid_color = 'rgb(' | append: mid_color[0] | append: ',' | append: mid_color[1] | append: ',' | append: mid_color[2] | append: ')' %}
-      {% assign style = style | append: 'color: ' | append: mid_color %}
-    {% endif %}
-    {% assign tag_url_encode = tag[0] | url_encode | replace: '+', '%20' %}
-    <a href="{{ '/tag/#/' | relative_url | append: tag_url_encode }}" style="{{ style }}">{{ tag[0] }}</a>
-  {% endfor %}
-
-{% endcapture %}
-{% assign tagcloud = tagcloud | normalize_whitespace %}
+<style>
+.tag-cloud-tags { text-align: left; }
+.tags-all { margin-top: 20px; }
+.tags-list { margin: 0; padding: 0; list-style: none; }
+.tags-list-item { line-height: 12px;}
+.tags-list-count { color: #bbb; }
+.tags-list-count:before { display: inline; content: " ("; }
+.tags-list-count:after { display: inline; content: ") "; }
+.tags-list-child { padding-left: 10px; }
+</style>
+<div class="tags-all">
+  <ul id="ul-list" class="tags-list">
+    {% assign tags = site.tags %}
+    {% for tag in tags %}
+    <li id="{{ tag[0] }}" class="tags-list-item">
+      {% assign posts = tag[1] %}
+      {% assign tag_url_encode = tag[0] | url_encode | replace: '+', '%20' %}
+      <a class="tags-list-link" href="{{ '/tag/#/' | relative_url | append: tag_url_encode }}">{{ tag[0] }}</a>
+      <span class="tags-list-count">{{ posts.size }}</span>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+<script src="/assets/js/src/jquery.min.js"></script>
+<script>
+var li_list = $(".tags-list-item"), arr = [];
+for (var i = 0; i < li_list.length; i ++) {
+  arr[i] = li_list[i].id;
+}
+var resultArray = arr.sort(
+  function compareFunction(param1, param2) {
+    return param1.localeCompare(param2,"zh");
+  }
+);
+var str = ''
+for (var i = 0; i < arr.length; i++) {
+  str += $("#" + resultArray[i]).prop("outerHTML");
+}
+$("#ul-list").html(str);
+</script>
