--- a/_includes/_helper/tagcloud.html
+++ b/_includes/_helper/tagcloud.html
@@ -25,7 +25,9 @@
 <script>
 var li_list = $(".tags-list-item"), arr = [];
 for (var i = 0; i < li_list.length; i ++) {
-  arr[i] = li_list[i].id;
+    if (li_list[i] != null) {
+        arr[i] = li_list[i].id;
+    }
 }
 var resultArray = arr.sort(
   function compareFunction(param1, param2) {
