增加微信公号导流

--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -31,6 +31,7 @@
     </header>
 
     <main id="main" class="main">
+      <div id="container">
       <div class="main-inner">
         <div class="content-wrap">
           <div id="content" class="content">
@@ -43,6 +44,7 @@
           {{ sidebar }}
         {% endif %}
       </div>
+     </div>
     </main>
 
     <footer id="footer" class="footer">
@@ -83,4 +85,15 @@
   {% include _third-party/scroll-cookie.html %}
   {% include _third-party/exturl.html %}
 </body>
+<script src="https://my.openwrite.cn/js/readmore.js" type="text/javascript"></script>
+<script>
+    const btw = new BTWPlugin();
+    btw.init({
+        id: 'container',
+        blogId: '15236-1591451385095-427',
+        name: 'Java 极客技术',
+        qrcode: 'https://tva1.sinaimg.cn/large/007S8ZIlly1gfiwpim8cvj30by0byaav.jpg',
+        keyword: '1024',
+    });
+</script>
 </html>
