--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -93,7 +93,7 @@
         blogId: '15236-1591451385095-427',
         name: 'Java 极客技术',
         qrcode: 'https://tva1.sinaimg.cn/large/007S8ZIlly1gfiwpim8cvj30by0byaav.jpg',
-        keyword: '1024',
+        keyword: 'vip',
     });
 </script>
 </html>
